v0.4.5/CHANGELOG.md

# Change Log
All notable changes to this project will be documented in this file.
 
The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).
 
 
## [0.4.5] - 2023-12-21
  
Minor changes on README. CHANGELOG also added. No functional changes
 
### Added

- [CHANGELOG.md](https://github.com/mbserran/node-red-contrib-tapo-new-api/blob/master/CHANGELOG.md)
  MINOR `CHANGELOG.md` description of version changes added.

### Changed
 
### Fixed

## [0.4.1] - 2023-12-20
  
Help description added to the node and accessible from Node-RED.
 
### Added

- [tapo_actions.html](https://github.com/mbserran/node-red-contrib-tapo-new-api/blob/master/src/nodes/tapo_actions.html)
  MAJOR `help` description script added to the node. Now full explanation is accessible from Node-RED.

### Changed
 
### Fixed
 
 
## [0.4.0] - 2017-12-19
 
Fully functional version. Complete set of features added to control Tapo devices with both protocols.
Help not yet included in the node.

### Added
   
### Changed

- [tapo_klap_protocol.js](https://github.com/mbserran/node-red-contrib-tapo-new-api/blob/master/src/nodes/tapo_klap_protocol.ts)
  MINOR `webcrypto` alias in `node:crypto` module now call through `webcrypto` module to extend compatibility with Node-RED versions. Now extended from v20 to v15.
 
### Fixed
 